// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createDrillIntersection > creates drill intersection for measure cell attribute 1`] = `
[
  {
    "header": {
      "attributeHeader": {
        "formOf": {
          "identifier": "attr.opportunitysnapshot.forecastcategory",
          "name": "Forecast Category",
          "ref": {
            "uri": "/gdc/md/referenceworkspace/obj/1062",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1062",
        },
        "identifier": "label.opportunitysnapshot.forecastcategory",
        "localIdentifier": "a_label.opportunitysnapshot.forecastcategory",
        "name": "Forecast Category",
        "ref": {
          "uri": "/gdc/md/referenceworkspace/obj/1063",
        },
        "uri": "/gdc/md/referenceworkspace/obj/1063",
      },
      "attributeHeaderItem": {
        "name": "Exclude",
        "uri": "/gdc/md/referenceworkspace/obj/1062/elements?id=165680",
      },
    },
  },
  {
    "header": {
      "attributeHeader": {
        "formOf": {
          "identifier": "attr.owner.region",
          "name": "Region",
          "ref": {
            "uri": "/gdc/md/referenceworkspace/obj/1086",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1086",
        },
        "identifier": "label.owner.region",
        "localIdentifier": "a_label.owner.region",
        "name": "Region",
        "ref": {
          "uri": "/gdc/md/referenceworkspace/obj/1087",
        },
        "uri": "/gdc/md/referenceworkspace/obj/1087",
      },
      "attributeHeaderItem": {
        "name": "East Coast",
        "uri": "/gdc/md/referenceworkspace/obj/1086/elements?id=460488",
      },
    },
  },
  {
    "header": {
      "measureHeaderItem": {
        "format": "$#,##0.00",
        "identifier": "aangOxLSeztu",
        "localIdentifier": "m_aangOxLSeztu",
        "name": "Amount",
        "ref": {
          "uri": "/gdc/md/referenceworkspace/obj/1271",
        },
        "uri": "/gdc/md/referenceworkspace/obj/1271",
      },
    },
  },
  {
    "header": {
      "attributeHeader": {
        "formOf": {
          "identifier": "attr.product.id",
          "name": "Product",
          "ref": {
            "uri": "/gdc/md/referenceworkspace/obj/1054",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1054",
        },
        "identifier": "label.product.id.name",
        "localIdentifier": "a_label.product.id.name",
        "name": "Product Name",
        "ref": {
          "uri": "/gdc/md/referenceworkspace/obj/1055",
        },
        "uri": "/gdc/md/referenceworkspace/obj/1055",
      },
      "attributeHeaderItem": {
        "name": "CompuSci",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
      },
    },
  },
  {
    "header": {
      "attributeHeader": {
        "formOf": {
          "identifier": "attr.owner.department",
          "name": "Department",
          "ref": {
            "uri": "/gdc/md/referenceworkspace/obj/1088",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1088",
        },
        "identifier": "label.owner.department",
        "localIdentifier": "a_label.owner.department",
        "name": "Department",
        "ref": {
          "uri": "/gdc/md/referenceworkspace/obj/1089",
        },
        "uri": "/gdc/md/referenceworkspace/obj/1089",
      },
      "attributeHeaderItem": {
        "name": "Direct Sales",
        "uri": "/gdc/md/referenceworkspace/obj/1088/elements?id=460487",
      },
    },
  },
]
`;

exports[`createDrillIntersection > creates drill intersection for row attribute 1`] = `
[
  {
    "header": {
      "attributeHeader": {
        "formOf": {
          "identifier": "attr.product.id",
          "name": "Product",
          "ref": {
            "uri": "/gdc/md/referenceworkspace/obj/1054",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1054",
        },
        "identifier": "label.product.id.name",
        "localIdentifier": "a_label.product.id.name",
        "name": "Product Name",
        "ref": {
          "uri": "/gdc/md/referenceworkspace/obj/1055",
        },
        "uri": "/gdc/md/referenceworkspace/obj/1055",
      },
      "attributeHeaderItem": {
        "name": "CompuSci",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
      },
    },
  },
]
`;
